--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "url": "https://github.com/jet-lab/jet-v1-react.git"
   },
   "scripts": {
-    "start": "craco start",
     "build": "craco build",
-    "test": "craco test",
-    "fmt:fix": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\""
+    "fmt": "prettier --check .",
+    "fmt:fix": "prettier --write .",
+    "lint": "eslint . --ext ts,tsx",
+    "start": "craco start",
+    "test": "craco test"
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
@@ -35,13 +37,14 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "craco-less": "^1.20.0",
+    "eslint": "^8.10.0",
+    "eslint-config-react-app": "^7.0.0",
     "prettier": "^2.5.1",
     "react-scripts": "^4.0.3",
     "typescript": "^4.5.4"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
