--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,5 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "react-app"
-  ]
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "react-app"]
 }
