--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jet-lab/defi-yield-ts": "^1.0.7",
     "@jet-lab/jet-engine": "^0.2.19",
     "@project-serum/anchor": "^0.19.0",
+    "@solana/wallet-adapter-base": "^0.7.1",
     "@solana/wallet-adapter-react": "^0.13.1",
     "@solana/wallet-adapter-wallets": "^0.11.3",
     "@solana/web3.js": "^1.32.0",
