--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^4.17.2",
     "bs58": "^4.0.1",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1"
