--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@ant-design/icons": "^4.5.0",
     "@jet-lab/defi-yield-ts": "^1.0.10",
     "@jet-lab/jet-engine": "^0.2.23",
-    "@project-serum/anchor": "^0.19.0",
+    "@project-serum/anchor": "^0.23.0",
+    "@solana/buffer-layout": "^4.0.0",
+    "@solana/buffer-layout-utils": "^0.2.0",
+    "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.7.1",
     "@solana/wallet-adapter-react": "^0.13.1",
     "@solana/wallet-adapter-wallets": "^0.11.3",
-    "@solana/web3.js": "^1.32.0",
+    "@solana/web3.js": "^1.41.4",
     "@types/bn.js": "^5.1.0",
     "antd": "^4.17.2",
     "bs58": "^4.0.1",
@@ -47,8 +50,9 @@
     "eslint-config-react-app": "6.0.0",
     "husky": "^8.0.1",
     "prettier": "^2.5.1",
-    "react-scripts": "4.0.3",
-    "typescript": "4.4.4"
+    "react-error-overlay": "^6.0.9",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.5.4"
   },
   "browserslist": {
     "production": [
