--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bs58": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.0",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1"
   },
