--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "fmt:fix": "prettier --write .",
     "lint": "eslint . --ext ts,tsx",
     "start": "craco start",
-    "test": "craco test"
+    "test": "jest"
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
@@ -26,8 +26,15 @@
     "react-router-dom": "^6.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@craco/craco": "^6.4.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "12.1",
     "@types/bs58": "^4.0.1",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
@@ -35,9 +42,11 @@
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "babel-jest": "^28.1.0",
     "craco-less": "^1.20.0",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^7.0.0",
+    "jest": "^26.6.0",
     "prettier": "^2.5.1",
     "react-scripts": "^4.0.3",
     "typescript": "^4.5.4"
