--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/bs58": "^4.0.1",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.17",
