--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "12.1",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/bs58": "^4.0.1",
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "craco-less": "^1.20.0",
+    "eslint": "^7.11.0",
     "eslint-config-react-app": "^7.0.0",
     "husky": "^8.0.1",
     "jest": "^26.6.0",
