--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "fmt:fix": "prettier --write .",
     "lint": "eslint . --ext ts,tsx",
     "start": "craco start",
+    "start:legacy": "NODE_OPTIONS=--openssl-legacy-provider craco start",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "prepare": "husky install",
@@ -15,7 +16,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@jet-lab/defi-yield-ts": "^1.0.10",
-    "@jet-lab/jet-engine": "^0.2.19",
+    "@jet-lab/jet-engine": "0.2.23",
     "@project-serum/anchor": "^0.19.0",
     "@solana/wallet-adapter-base": "^0.7.1",
     "@solana/wallet-adapter-react": "^0.13.1",
@@ -42,16 +43,12 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
     "craco-less": "^1.20.0",
-    "eslint": "^7.11.0",
-    "eslint-config-react-app": "^7.0.0",
+    "eslint-config-react-app": "6.0.0",
     "husky": "^8.0.1",
-    "jest": "^26.6.0",
     "prettier": "^2.5.1",
-    "react-scripts": "^4.0.3",
-    "typescript": "^4.5.4"
+    "react-scripts": "4.0.3",
+    "typescript": "4.4.4"
   },
   "browserslist": {
     "production": [
