--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@jet-lab/defi-yield-ts": "^1.0.10",
-    "@jet-lab/jet-engine": "0.2.23",
+    "@jet-lab/jet-engine": "^0.2.23",
     "@project-serum/anchor": "^0.19.0",
     "@solana/wallet-adapter-base": "^0.7.1",
     "@solana/wallet-adapter-react": "^0.13.1",
