--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
+    "@dialectlabs/react": "^0.5.4",
+    "@dialectlabs/react-ui": "^0.8.6",
     "@jet-lab/defi-yield-ts": "^1.0.10",
     "@jet-lab/jet-engine": "^0.2.23",
     "@project-serum/anchor": "^0.19.0",
-    "@solana/wallet-adapter-base": "^0.7.1",
-    "@solana/wallet-adapter-react": "^0.13.1",
-    "@solana/wallet-adapter-wallets": "^0.11.3",
+    "@solana/wallet-adapter-base": "^0.9.5",
+    "@solana/wallet-adapter-react": "^0.15.4",
+    "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.32.0",
     "@types/bn.js": "^5.1.0",
     "antd": "^4.17.2",
