--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
-    "@jet-lab/jet-engine": "^0.3.3",
-    "@project-serum/anchor": "^0.23.0",
+    "@jet-lab/margin": "file:jet-lab-margin-0.0.1.tgz",
+    "@project-serum/anchor": "^0.24.2",
+    "@pythnetwork/client": "^2.7.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/spl-token": "^0.2.0",
