--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
-    "@jet-lab/margin": "file:jet-lab-margin-0.0.1.tgz",
+    "@jet-lab/margin": "file:jet-lab-margin-0.1.0.tgz",
     "@project-serum/anchor": "^0.24.2",
     "@pythnetwork/client": "^2.7.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -30,6 +30,7 @@
     "bs58": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-query": "^3.39.0",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1"
@@ -53,6 +54,7 @@
     "prettier": "^2.5.1",
     "react-error-overlay": "^6.0.9",
     "react-scripts": "^4.0.3",
+    "source-map-loader": "^1.1.3",
     "typescript": "^4.5.4"
   },
   "browserslist": {
