--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
-    "@jet-lab/margin": "file:jet-lab-margin-0.1.0.tgz",
+    "@jet-lab/margin": "^0.1.0",
     "@project-serum/anchor": "^0.24.2",
     "@pythnetwork/client": "^2.7.0",
     "@solana/buffer-layout": "^4.0.0",
