--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
-    "@jet-lab/margin": "^0.1.2",
+    "@jet-lab/margin": "^0.1.8",
     "@project-serum/anchor": "^0.24.2",
     "@pythnetwork/client": "^2.7.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -28,6 +28,7 @@
     "@types/bn.js": "^5.1.0",
     "antd": "^4.17.2",
     "bs58": "^4.0.1",
+    "chai": "^4.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
