--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-error-boundary": "^3.1.4",
     "react-query": "^3.39.0",
     "react-router": "^6.1.1",
-    "react-router-dom": "^6.1.1"
+    "react-router-dom": "^6.1.1",
+    "react-string-replace": "^1.1.0"
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
