--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@jet-lab/defi-yield-ts": "^1.0.10",
     "@jet-lab/jet-engine": "^0.2.23",
     "@project-serum/anchor": "^0.19.0",
+    "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.4",
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.32.0",
-    "@types/bn.js": "^5.1.0",
     "antd": "^4.17.2",
     "bs58": "^4.0.1",
+    "logrocket": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.1",
@@ -38,6 +39,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^14.2.0",
+    "@types/bn.js": "^5.1.0",
     "@types/bs58": "^4.0.1",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.17",
