--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "test:coverage": "jest --coverage",
     "prepare": "husky install",
     "compile": "npx tsc --noEmit",
-    "precommit": "npm run compile && npm run fmt:fix && npm run lint && npm run test"
+    "precommit": "npm run fmt:fix"
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@jet-lab/jet-antd": "^0.4.26",
-    "@jet-lab/margin": "^0.1.24",
+    "@jet-lab/margin": "^0.1.25",
     "@project-serum/anchor": "^0.24.2",
     "@pythnetwork/client": "^2.7.0",
     "@solana/buffer-layout": "^4.0.0",
