--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "antd": "^4.17.2",
     "bs58": "^4.0.1",
     "chai": "^4.3.6",
+    "logrocket": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
