--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-error-overlay": "^6.0.9",
     "react-scripts": "^4.0.3",
     "source-map-loader": "^1.1.3",
+    "ts-node": "^10.8.2",
     "typescript": "^4.5.4"
   },
   "browserslist": {
