--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-scripts": "^4.0.3",
     "source-map-loader": "^1.1.3",
     "ts-node": "^10.8.2",
+    "type-fest": "^0.13.1",
     "typescript": "^4.5.4"
   },
   "browserslist": {
