--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --ext ts,tsx",
     "start": "craco start",
     "start:legacy": "NODE_OPTIONS=--openssl-legacy-provider craco start",
-    "debug": "cd ../jet-v2/libraries/ts && yarn build:esm && yarn pack -f jet-lab-margin.tgz && cd ../../../jet-app && npm i ../jet-v2/libraries/ts/jet-lab-margin.tgz && npm run start",
+    "debug": "cd ../jet-v2/libraries/ts && yarn build && npm link && cd ../../../jet-app && npm link @jet-lab/margin && npm run start",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "prepare": "husky install",
@@ -17,7 +17,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@jet-lab/jet-antd": "^0.4.28",
-    "@jet-lab/margin": "^0.1.32",
+    "@jet-lab/margin": "^0.1.34",
     "@project-serum/anchor": "^0.24.2",
     "@pythnetwork/client": "^2.7.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -61,7 +61,6 @@
     "react-scripts": "^4.0.3",
     "source-map-loader": "^1.1.3",
     "ts-node": "^10.8.2",
-    "type-fest": "^0.13.1",
     "typescript": "^4.5.4"
   },
   "browserslist": {
