--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
+    "@dialectlabs/react": "^0.5.4",
+    "@dialectlabs/react-ui": "^0.8.6",
     "@jet-lab/jet-antd": "^0.4.28",
     "@jet-lab/margin": "^0.1.36",
     "@project-serum/anchor": "^0.24.2",
@@ -23,9 +25,9 @@
     "@solana/buffer-layout": "^4.0.0",
     "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/spl-token": "^0.2.0",
-    "@solana/wallet-adapter-base": "^0.7.1",
-    "@solana/wallet-adapter-react": "^0.13.1",
-    "@solana/wallet-adapter-wallets": "^0.11.3",
+    "@solana/wallet-adapter-base": "^0.9.7",
+    "@solana/wallet-adapter-react": "^0.15.6",
+    "@solana/wallet-adapter-wallets": "^0.16.6",
     "@solana/web3.js": "^1.41.4",
     "@types/bn.js": "^5.1.0",
     "antd": "^4.17.2",
