--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@dialectlabs/react": "^0.5.4",
-    "@dialectlabs/react-ui": "^0.9.0",
+    "@dialectlabs/react-ui": "^1.0.0-beta.14",
     "@jet-lab/jet-antd": "^0.4.28",
     "@jet-lab/margin": "^0.1.40",
     "@project-serum/anchor": "^0.24.2",
