--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "test:coverage": "jest --coverage",
     "prepare": "husky install",
     "compile": "npx tsc --noEmit",
-    "precommit": "npm run fmt:fix"
+    "precommit": "npm run fmt:fix",
+    "checkall": "npm run compile && npm run fmt:fix && npm run lint && npm run test"
   },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@dialectlabs/react": "^0.5.4",
-    "@dialectlabs/react-ui": "^0.8.6",
+    "@dialectlabs/react-ui": "^1.0.0-beta.14",
     "@jet-lab/jet-antd": "^0.4.28",
     "@jet-lab/margin": "^0.1.40",
     "@project-serum/anchor": "^0.24.2",
     "@pythnetwork/client": "^2.7.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/buffer-layout-utils": "^0.2.0",
-    "@solana/spl-token": "^0.2.0",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-latest": "npm:@solana/spl-token@^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.7",
     "@solana/wallet-adapter-react": "^0.15.6",
     "@solana/wallet-adapter-wallets": "^0.16.6",
