fix liquidation modal

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "craco start",
     "start:legacy": "NODE_OPTIONS=--openssl-legacy-provider craco start",
     "debug": "cd ../jet-v2/libraries/ts && yarn build && npm link && cd ../../../jet-app && npm link @jet-lab/margin && npm run start",
+    "debug:legacy": "cd ../jet-v2/libraries/ts && yarn build && npm link && cd ../../../jet-app && npm link @jet-lab/margin && npm run start:legacy",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "prepare": "husky install",
