--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
     "craco-less": "^1.20.0",
+    "cypress": "^10.3.1",
+    "cypress-wait-until": "^1.7.2",
     "eslint-config-react-app": "6.0.0",
     "husky": "^8.0.1",
     "prettier": "^2.5.1",
