--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ant-design/icons": "^4.5.0",
     "@dialectlabs/react": "^0.5.4",
     "@dialectlabs/react-ui": "^1.0.0-beta.14",
+    "@jet-lab/e2e-react-adapter": "^0.1.0",
     "@jet-lab/jet-antd": "^0.4.28",
     "@jet-lab/margin": "^0.1.61",
     "@project-serum/anchor": "^0.24.2",
@@ -38,7 +39,6 @@
     "antd": "^4.17.2",
     "bs58": "^4.0.1",
     "chai": "^4.3.6",
-    "e2e-react-adapter": "^0.1.1",
     "logrocket": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
