--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
-# One of localnet, devnet or mainnet-beta
-REACT_APP_CLUSTER = devnet
+# RPC Backend Tokens
+REACT_APP_RPC_TOKEN = 000
+REACT_APP_RPC_DEV_TOKEN = 000
 # IP Registry API keys
 REACT_APP_IP_REGISTRY = 000
-REACT_APP_LOGROCKET_PROJECT =
+REACT_APP_LOGROCKET_PROJECT = 000
