--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#53bd9f",
   "icons": [
     {
-      "src": "img/jet/jet_logo_gradient.png",
+      "src": "img/jet/jet_logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
